--- a/HRO/package.json
+++ b/HRO/package.json
@@ -10,8 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@tailwindcss/vite": "^4.1.12",
     "framer-motion": "^12.23.12",
+    "jspdf": "^3.0.2",
+    "jspdf-autotable": "^5.0.2",
     "lucide": "^0.540.0",
     "lucide-react": "^0.540.0",
     "react": "^19.1.1",
